--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,61 @@
   --food-color: #ffffff;
 }
 
-body {
-  background-color: #0a301b;
-  color: #fff;
-  text-align: center;
-  font-family: Arial, sans-serif;
-  position: relative;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-h1 {
-  margin-top: 20px;
+body {
+  height: 100vh;
+  color: #fff;
+}
+
+header {
+  background-color: #16423C;
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 10%;
+  text-align: center;
+}
+
+header h1 {
+  color: #fff;
+  font-size: 3em;
+  width: 100%;
+  font-family: 'DS-Roti', sans-serif;
+  transition: .4s;
+}
+@font-face {
+  font-family: 'DS-Roti';
+  src: url('./fonts/love_roti/Love\ Roti.ttf') format('truetype');
+}
+
+header h1:hover {
+  color: #C4DAD2;
+  cursor: default;
+}
+
+header h1 img {
+  width: 50px;
+}
+
+header a {
+  color: #fff;
+  text-decoration: none;
+  position: absolute;
+}
+
+main {
+  background-color: #16423C;
+  width: 100%;
+  height: 80%;
+  text-align: center;
 }
 
 #score {
   font-size: 24px;
-  margin: 10px 0;
 }
 
 canvas {
@@ -44,4 +84,10 @@ canvas {
   transform: translate(-50%, -50%);
   font-size: 72px;
   color: #fff;
+}
+
+footer {
+  background-color: #16423C;
+  height: 10%;
+  text-align: center;
 }
