--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ header {
   display: flex;
   align-items: center;
   position: relative;
-  height: 10%;
+  height: 13%;
   text-align: center;
 }
 
@@ -28,8 +28,12 @@ header h1 {
   color: #fff;
   font-size: 3em;
   width: 100%;
-  font-family: 'DS-Roti', sans-serif;
   transition: .4s;
+}
+
+h1, h2{
+  font-family: 'DS-Roti', sans-serif;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 @font-face {
   font-family: 'DS-Roti';
@@ -42,13 +46,19 @@ header h1:hover {
 }
 
 header h1 img {
-  width: 50px;
+  width: 40px;
 }
 
 header a {
   color: #fff;
   text-decoration: none;
   position: absolute;
+  top: 1rem;
+  left: 1.5rem;
+}
+
+header a img {
+  width: 50px;
 }
 
 main {
@@ -60,6 +70,7 @@ main {
 
 #score {
   font-size: 24px;
+  padding: 1rem 0;
 }
 
 canvas {
@@ -75,6 +86,7 @@ canvas {
   padding: 10px 20px;
   font-size: 18px;
   cursor: pointer;
+  border-radius: 15px;
 }
 
 #countdown {
@@ -86,8 +98,139 @@ canvas {
   color: #fff;
 }
 
+
+/* Estilos para el modal */
+.modal {
+  display: none; /* Ocultar por defecto */
+  position: fixed;
+  z-index: 1; /* Se coloca encima de otros elementos */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro con opacidad */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  color: #000;
+  width: 80%;
+  height: 200px;
+  max-width: 350px; /* Ancho máximo */
+  margin: 20% auto;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #888;
+  border-radius: 5px;
+  text-align: center;
+  position: relative;
+}
+
+h2 {
+  color: #C4DAD2;
+  font-size: 2em;
+  cursor: default;
+  margin-top: .6rem;
+}
+
+.close {
+  background-color: #d83939;
+  color: white;
+  width: 2.5rem;
+  height: 2.2rem;
+  margin: 5px;
+  padding: 0 1px;
+  font-size: 2em;
+  font-weight: bold;
+  position: absolute;
+  top: 0rem;
+  right: 1px;
+  border-radius: 5px;
+}
+
+.close:hover, .close:focus {
+  color: #ffd1d1;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content p {
+  font-size: 1.5em;
+}
+
+button#restartGame {
+  background-color: #4CAF50;
+  color: white;
+  max-width: 13rem;
+  padding: 15px 25px;
+  margin: 0 0 .2rem 0;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+button#restartGame:hover {
+  background-color: #45a049;
+}
+
+
+
 footer {
   background-color: #16423C;
-  height: 10%;
+  color: #fff;
+  height: 7%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   text-align: center;
 }
+
+footer a {
+  color: #fff;
+}
+
+.logos-foot {
+  width: 140px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: space-around
+}
+
+.by-foot {
+  display: flex;
+  text-align: center;
+  align-items: center;
+}
+
+.by-foot a {
+  margin-left: 5px;
+  text-decoration: none;
+}
+
+.by-foot a:hover {
+  color: #16e716;
+  text-decoration:underline;
+}
+
+.logos-foot a {
+  text-decoration: none;
+  padding: 5px;
+}
+
+.logos-foot a:hover svg {
+  color: #16e716;
+  scale: 1.3;
+}
+
+.logos-foot a svg {
+  width: 25px; /* Cambia el ancho a 50px */
+  height: 25px; /* Cambia el alto a 50px */
+  margin: 0;
+  transition: .2s;
+}
+
