--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ header {
   background-color: #16423C;
   display: flex;
   align-items: center;
+  justify-content: center;
   position: relative;
   height: 13%;
   text-align: center;
@@ -27,7 +28,6 @@ header {
 header h1 {
   color: #fff;
   font-size: 3em;
-  width: 100%;
   transition: .4s;
 }
 
@@ -52,13 +52,23 @@ header h1 img {
 header a {
   color: #fff;
   text-decoration: none;
+  padding: 4px 4px 0 3px;
   position: absolute;
   top: 1rem;
   left: 1.5rem;
+  transition: .2s;
+  border-radius: 30px;
+  border: 1px solid white;
+}
+
+header a:hover {
+  background-color: #323836;
+  filter: opacity(.5);
 }
 
 header a img {
   width: 50px;
+  height: 50px;
 }
 
 main {
@@ -202,18 +212,20 @@ footer a {
 }
 
 .by-foot {
+  color: #C4DAD2;
   display: flex;
   text-align: center;
   align-items: center;
 }
 
 .by-foot a {
+  color: #C4DAD2;
   margin-left: 5px;
   text-decoration: none;
 }
 
 .by-foot a:hover {
-  color: #16e716;
+  color: white;
   text-decoration:underline;
 }
 
@@ -228,6 +240,7 @@ footer a {
 }
 
 .logos-foot a svg {
+  color: #C4DAD2;
   width: 25px; /* Cambia el ancho a 50px */
   height: 25px; /* Cambia el alto a 50px */
   margin: 0;
